k8s/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: medisync-prod
  labels:
    name: medisync-prod
